syntax = "proto3";

option csharp_namespace = "LogExpert.Grpc";

import "google/protobuf/empty.proto";

package logexpert;

// The log service definition.
service LogExpertService
{
  // Sends a log message
  rpc SendLog (LogRequest) returns (LogReply) ;
  rpc LoadFiles (FileNames) returns (FilesReply);
  rpc NewWindow (FileNames) returns (FilesReply);
  rpc NewWindowOrLockedWindow (FileNames) returns (FilesReply);
  //is this really needed?
  rpc WindowClosed(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc GetLogWindowCount(google.protobuf.Empty) returns (Count);
}

message FileNames
{
	repeated string fileNames = 1;
}

message Count
{
	int32 count = 1;
}

message FilesReply
{
	bool success = 1;
}

// The request message containing the log message.
message LogRequest
{
  string message = 1;
}

// The response message containing the response.
message LogReply
{
  string result = 1;
}